Add API skeletons
